tests/pos/arrays/arr-18.ts

/*@ qualif Length(v: a): len v = 6 */

let a: IArray<number> = [1,2,3,4,5,6]

a[5] = 1;
