tests/neg/arrays/arr-14.ts


let a1 = [1,2,3];

let a2 = [4,5,6];

let a3 = a1.concat(a2);

assert(a3.length === 8);
